--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/google.maps": "^3.50.4",
+    "@types/three": "^0.146.0",
     "typescript": "^4.8.4",
     "vite": "^3.1.7"
   },
